--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=0,0,,,,, initial-scale=1.0">
     <title>meu primeiro exercicio</title>
-    
+    <style>
+        body {
+            background-color: rgb(149, 78, 216);
+        }
+    </style>
 </head>
 <body>
     <h1>olá, mundo</h1>
