--- a/desafios/desafio010 - Copia, adaptaçao de video iframe/index.html
+++ b/desafios/desafio010 - Copia, adaptaçao de video iframe/index.html
@@ -48,14 +48,14 @@
                     <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
                     <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
                     <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
-                    <li>2.2 - <abbr title="">Froyo</abbr></li>
-                    <li>2.3 - <abbr title="">Gingerbread</abbr></li>
-                    <li>3.0 - <abbr title="">Honeycomb</abbr></li>
-                    <li>4.0 - <abbr title="">Ice Cream Sandwich</abbr></li>
-                    <li>4.1 - <abbr title="">Jelly Bean</abbr></li>
-                    <li>4.4 - <abbr title="">KitKat</abbr></li>
-                    <li>5.0 - <abbr title="">Lolipop</abbr></li>
-                    <li>6.0 - <abbr title="">Marshmallow</abbr></li>
+                    <li>2.2 - <abbr title="Iogurte congelado">Froyo</abbr></li>
+                    <li>2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr></li>
+                    <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr></li>
+                    <li>4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr></li>
+                    <li>4.1 - <abbr title="jujuba">Jelly Bean</abbr></li>
+                    <li>4.4 - <abbr title="KitKat">KitKat</abbr></li>
+                    <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
+                    <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
                     <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
                     <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
                     <li>9.0 - <abbr title="Torta">Pie</abbr></li>
@@ -67,6 +67,6 @@
             <p class="texto">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
     </main>
-    <footer>site feito por Paulo</footer>
+    <footer>Site feito por Paulo</footer>
 </body>
 </html>
