--- a/exercicios/ex022/fundo06.html
+++ b/exercicios/ex022/fundo06.html
@@ -6,15 +6,13 @@
     <title>Document</title>
     <style>
         body {
-            background-color: rgb(41, 41, 41);
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: top center;
-            background-repeat: no-repeat;
-            background-size: cover;
+          
             height: 100vh;
+            background-position: cover;
+            background: black url('imagens/wallpaper002.jpg') top center no-repeat fixed;
         }
         main {
-            width: 300px;
+            max-width: 400px;
             background-color: white;
             margin: auto;
             padding: 10px;
@@ -27,7 +25,12 @@
     <main>
         <h1>teste de imagens de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero porro sequi dolor iste corrupti, quidem illo, explicabo voluptate dignissimos suscipit tenetur sit. Eos animi consectetur, nam odio libero placeat aperiam!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa debitis, odit cupiditate eveniet accusamus nemo, id tenetur, minima ut sed rem praesentium. Deserunt assumenda, corporis perferendis accusamus velit fugiat?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa debitis, odit cupiditate eveniet accusamus nemo, id tenetur, minima ut sed rem praesentium. Deserunt assumenda, corporis perferendis accusamus velit fugiat? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, similique! Nostrum aspernatur cupiditate eum dolores placeat magni repellendus modi accusamus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, culpa sequi. Vero unde sunt inventore dignissimos maiores cupiditate nam repellendus officiis, excepturi quia provident atque commodi? Voluptas quaerat et voluptatum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa debitis, odit cupiditate eveniet accusamus nemo, id tenetur, minima ut sed rem praesentium. Deserunt assumenda, corporis perferendis accusamus velit fugiat? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, similique! Nostrum aspernatur cupiditate eum dolores placeat magni repellendus modi accusamus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, culpa sequi. Vero unde sunt inventore dignissimos maiores cupiditate nam repellendus officiis, excepturi quia provident atque commodi? Voluptas quaerat et voluptatum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa debitis, odit cupiditate eveniet accusamus nemo, id tenetur, minima ut sed rem praesentium. Deserunt assumenda, corporis perferendis accusamus velit fugiat? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, similique! Nostrum aspernatur cupiditate eum dolores placeat magni repellendus modi accusamus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, culpa sequi. Vero unde sunt inventore dignissimos maiores cupiditate nam repellendus officiis, excepturi quia provident atque commodi? Voluptas quaerat et voluptatum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa debitis, odit cupiditate eveniet accusamus nemo, id tenetur, minima ut sed rem praesentium. Deserunt assumenda, corporis perferendis accusamus velit fugiat? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, similique! Nostrum aspernatur cupiditate eum dolores placeat magni repellendus modi accusamus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, culpa sequi. Vero unde sunt inventore dignissimos maiores cupiditate nam repellendus officiis, excepturi quia provident atque commodi? Voluptas quaerat et voluptatum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In culpa debitis, odit cupiditate eveniet accusamus nemo, id tenetur, minima ut sed rem praesentium. Deserunt assumenda, corporis perferendis accusamus velit fugiat? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, similique! Nostrum aspernatur cupiditate eum dolores placeat magni repellendus modi accusamus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, culpa sequi. Vero unde sunt inventore dignissimos maiores cupiditate nam repellendus officiis, excepturi quia provident atque commodi? Voluptas quaerat et voluptatum?</p>
+     
     </main>
 </body>
 </html>
