--- a/exercicios/ex023/tabela01.html
+++ b/exercicios/ex023/tabela01.html
@@ -10,7 +10,7 @@
         }
         table {
             border-collapse: collapse;
-            width: 300px;
+            width: 400px;
         }
         td {
             border: 1px solid black;
@@ -19,29 +19,39 @@
             background-color: blueviolet;
             color: white;
         }
+        .teste2 {
+            background-color: brown;
+        }
     </style>
 </head>
 <body>
     <table>
         <tr class="teste">
             <td>A1</td>
-            <td>B2</td>
-            <td>C3</td>
+            <td>B1</td>
+            <td>C1</td>
         </tr>
         <tr>
-            <td>A1</td>
+            <td>A2</td>
             <td>B2</td>
             <td>C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="teste2">C3</td>
         </tr>
         <tr>
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
+        </tr>
+        <tr>
+            <td>A5</td>
+            <td>B5</td>
+        </tr>
+        <tr>
+            <td>A6</td>
         </tr>
     </table>
 </body>
