--- a/exercicios/ex023/tabela01.html
+++ b/exercicios/ex023/tabela01.html
@@ -11,22 +11,19 @@
         table {
             border-collapse: collapse;
             width: 400px;
+            height: 400px;
         }
         td {
+            text-align: center;
+            vertical-align: middle;
             border: 1px solid black;
         }
-        .teste {
-            background-color: blueviolet;
-            color: white;
-        }
-        .teste2 {
-            background-color: brown;
-        }
+        
     </style>
 </head>
 <body>
     <table>
-        <tr class="teste">
+        <tr>
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
@@ -39,20 +36,14 @@
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td class="teste2">C3</td>
+            <td>C3</td>
         </tr>
         <tr>
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
         </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
-        </tr>
+        
     </table>
 </body>
 </html>
