--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -58,9 +58,9 @@
     <table>
         <thead>
             <tr>
-                <th>Posiçao</th>
-                <th>Unidade federativa</th>
-                <th>Populaçao <br>
+                <th scope="col">Posiçao</th>
+                <th scope="col">Unidade federativa</th>
+                <th scope="col">Populaçao <br>
                     (censo de 2022)
                 </th>
             </tr>
@@ -205,7 +205,7 @@
         <tfoot>
             <tr>
                 <td></td>
-                <th>Total</th>
+                <th scope="row">Total</th>
                 <td class="numero"><strong>203.062.512 </strong></td>
             </tr>
         </tfoot>
