--- a/exercicios/ex024/iframe01.html
+++ b/exercicios/ex024/iframe01.html
@@ -15,9 +15,11 @@
 <body>
     <h1>usando iframe</h1>
     <p>uma breve vista do site
-         <iframe src="https://64cf9f61842a6d4ea097c3de--bejewelled-fenglisu-7ffc8d.netlify.app/"  frameborder="0" scoling="">
+         <iframe src="https://64cf9f61842a6d4ea097c3de--bejewelled-fenglisu-7ffc8d.netlify.app/"  frameborder="0" scrolling="">
 
         </iframe>
+        
     </p>
+    <p>teste de video</p> <iframe src="https://player.vimeo.com/external/538575833.sd.mp4?s=a789a6da0dbe1e5353b671887e571502fd567255&profile_id=165&oauth2_token_id=57447761" frameborder="0"></iframe>
 </body>
 </html>
