--- a/exercicios/ex024/iframe02.html
+++ b/exercicios/ex024/iframe02.html
@@ -8,7 +8,9 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, nostrum error. Accusantium est quaerat assumenda voluptatem sequi reprehenderit totam consequuntur nisi omnis deleniti corporis, rerum possimus molestias cum fuga doloribus?
     Libero assumenda facilis corporis asperiores quasi, error nostrum eligendi corrupti laborum veritatis dolor quod earum! Quis velit in officiis ut numquam maxime facilis sequi, cumque quod mollitia eligendi accusantium consectetur?</p>
-        <iframe src="pag02.html" frameborder="0" scrolling="no"></iframe>
+        <iframe src="extras/pag02.html" frameborder="0" scrolling="auto">
+            <p>seu avegador nao é conpativo</p>
+        </iframe>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia inventore accusantium rerum corrupti laboriosam repellendus cupiditate. Excepturi inventore illum suscipit atque, tenetur quod sed deleniti labore aspernatur id nesciunt rerum.
     Magni accusamus eos vel iusto quaerat? Assumenda saepe facere nulla dolorum omnis cupiditate voluptatibus nesciunt nisi quia doloribus consectetur cum hic blanditiis necessitatibus, laborum consequuntur, ut corrupti. Doloribus, aut minus!</p>
 </body>
