--- a/exercicios/ex024/extras/pag02.html
+++ b/exercicios/ex024/extras/pag02.html
@@ -16,5 +16,7 @@
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur omnis ipsum provident iste deleniti, sint porro atque doloremque est voluptate qui mollitia, ex quam ducimus. Consectetur impedit velit aut.
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, nihil adipisci iusto ad aliquam deserunt totam illo nisi cumque obcaecati consectetur ducimus ipsa nemo id aliquid vel, fugit corrupti Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit modi aperiam ullam. In eveniet, nesciunt similique dolor pariatur laborum eius ut quasi officiis voluptatum doloribus dolore sed, ullam, a voluptatibus.
     </P>
+
+    <a href="../iframe04.html">pagina principal</a>
 </body>
 </html>
