--- a/exercicios/ex024/extras/pag03.html
+++ b/exercicios/ex024/extras/pag03.html
@@ -17,5 +17,7 @@
 <body>
     <h1>Terceira pagina</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa expedita, natus est distinctio ea rerum sunt iure explicabo architecto quo similique delectus aut blanditiis, dicta tempora eaque sint quidem magnam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur non doloribus, iusto iste nulla, placeat nemo officiis maiores dolor excepturi tempora quis unde corporis velit ut impedit ea! Odio, provident.</p>
+
+    <a href="../iframe04.html">pagina principal</a>
 </body>
 </html>
