--- a/exercicios/ex025/form05.html
+++ b/exercicios/ex025/form05.html
@@ -36,7 +36,7 @@
                     <label for="ifut">Futebol</label>
                 </p>
                 <p>
-                    <input type="checkbox" name="volei" id="ivolei" >
+                    <input type="checkbox" name="volei" id="ivolei" checked >
                     <label for="ivolei">Volei</label>
                 </p>
                 <p>
