--- a/exercicios/ex026/mq04/imagens/index.html
+++ b/exercicios/ex026/mq04/imagens/index.html
@@ -14,7 +14,7 @@
         <img id="tablet" src="icon-tablet.png" alt="tablet">
         <img id="impressa" src="icon-print.png" alt="versao impressora">
         <img id="pc" src="icon-pc.png" alt="tala computador">
-        <img id="televisao" src="icon-tv.png" alt="tela da televisao">
+        <img id="telas-grandes" src="icon-tv.png" alt="tela da televisao">
     </main>
 </body>
 </html>
