--- a/exercicios/ex026/mq04/index.html
+++ b/exercicios/ex026/mq04/index.html
@@ -10,11 +10,11 @@
 <body>
     <main>
         <h1>Teste de media query</h1>
-        <img id="celular" src="icon-phone.png" alt="tela do celular">
-        <img id="tablet" src="icon-tablet.png" alt="tablet">
-        <img id="impressa" src="icon-print.png" alt="versao impressora">
-        <img id="pc" src="icon-pc.png" alt="tala computador">
-        <img id="telas-grandes" src="icon-tv.png" alt="tela da televisao">
+        <img id="celular" src="imagens/icon-phone.png" alt="tela do celular">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="tablet">
+        <img id="impressa" src="imagens/icon-print.png" alt="versao impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="tala computador">
+        <img id="telas-grandes" src="imagens/icon-tv.png" alt="tela da televisao">
     </main>
 </body>
 </html>
