--- a/exercicios/ex026/mq06/index.html
+++ b/exercicios/ex026/mq06/index.html
@@ -6,8 +6,9 @@
     <title>menu Hamburguer</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="estilo/media-quyre.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
        <h1>Meu site</h1>
        <span id="burguer" class="material-symbols-rounded" onclick="clickMenu()">
@@ -32,6 +33,14 @@
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >=768) {
+                opcoes.style.display = 'block'
+            } else [
+                opcoes.style.display ='none'
+            ]
+        }
+
         function clickMenu() {
             if (opcoes.style.display == 'block') {
                 opcoes.style.display= 'none'
